--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             <div class="data-desc-2">
                 <ul>
                     <li class="list-group-item fw-bold judul-desc">Vision</li>
-                    <li class="p-1 list-group-item">
+                    <li class="list-group-item">
                         Virtual Reality atau biasa kita sebut VR adalah suatu teknologi yang
                         memungkinkan manusia untuk melihat dunia yang berbeda.
                     </li>
@@ -556,11 +556,7 @@
     <script src="assets/js/bandingkan-search.js"></script>
     <script src="assets/data/data.js"></script>
 
-    <!-- tidak jadi -->
-    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script> -->
+
     <script>
         localStorage.removeItem('key')
 
