--- a/page-extra/page-spec.html
+++ b/page-extra/page-spec.html
@@ -99,7 +99,7 @@
         <ul
           class="nav-content d-flex justify-content-center align-items-center gap-4 w-auto bg-white p-2 ps-4 pe-4 rounded rounded-5"
         >
-          <li class="nav-item active">
+          <li class="nav-item">
             <a href="../index.html">Beranda</a>
           </li>
           <li class="nav-item">
@@ -201,15 +201,11 @@
     </section-spec>
     <!-- Vision Spec end -->
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script> -->
     <script src="../assets/js/script-spec.js"></script>
     <script src="../assets/js/img-slide.js"></script>
-    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
-  </script> -->
+  </script> 
     <script>
       localStorage.removeItem("key");
 
