--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@
 
     <!-- Start Halaman Banding -->
     <div id="frame7">
-        <img src="assets/img/head-vr.png" style="object-fit: contain;" id="gambartesting"
-            class="mt-5 w-100 animate-vr-img" />
+        <img src="assets/img/head-vr.png" style="object-fit: cover; width: 100%;" id="gambartesting"
+            class="mt-5" />
 
         <div class="row parent-content container-fluid mt-5">
             <div class="col ms-4 adaaja">
