--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         </p>
                     </div>
                     <div class="card-footer">
-                        <img src="/assets/img/Rectangle 104.png" alt="">
+                        <img src="assets/img/Rectangle 104.png" alt="">
                         <p>Roni Kuntoro</p>
                     </div>
                 </div>
@@ -252,7 +252,7 @@
                             remote lagi.</p>
                     </div>
                     <div class="card-footer">
-                        <img src="/assets/img/Rectangle 104.png" alt="">
+                        <img src="assets/img/Rectangle 104.png" alt="">
                         <p>Nazmitsq Maulan</p>
                     </div>
                 </div>
@@ -266,7 +266,7 @@
                         <p>Keren Banget, unik serasa di dunia lain.</p>
                     </div>
                     <div class="card-footer">
-                        <img src="/assets/img/Rectangle 104.png" alt="">
+                        <img src="assets/img/Rectangle 104.png" alt="">
                         <p>Muhammad Rizki</p>
                     </div>
                 </div>
@@ -289,7 +289,7 @@
                             perkembangan teknologi kacamata pintar seperti vr ini.</p>
                     </div>
                     <div class="card-footer">
-                        <img src="/assets/img/Rectangle 104.png" alt="">
+                        <img src="assets/img/Rectangle 104.png" alt="">
                         <p>Ishaq Wongso</p>
                     </div>
                 </div>
