--- a/page-extra/page-spec.html
+++ b/page-extra/page-spec.html
@@ -200,14 +200,13 @@
       <!-- Footer - Spec end -->
     </section-spec>
     <!-- Vision Spec end -->
-
     <script src="../assets/js/script-spec.js"></script>
+    <script src="../assets/js/script-toSpec.js"></script>
     <script src="../assets/js/img-slide.js"></script>
   <script>
     AOS.init();
   </script> 
     <script>
-      localStorage.removeItem("key");
 
       localStorage.removeItem("produk1");
       localStorage.removeItem("produk2");
